<resources>
    <string name="app_name">小购屋</string>
    <string name="sign_up_title">注册</string>
    <string name="sign_in_title">登录</string>
    <string name="sign_up_edit_name_hint">姓名</string>
    <string name="sign_up_edit_phone_hint">手机号码</string>
    <string name="sign_up_edit_email_hint">邮箱</string>
    <string name="sign_up_edit_password_hint">密码</string>
    <string name="sign_in_link">还没有注册？请先注册</string>
    <string name="sign_up_link">已有账号，请登录</string>
    <string name="sign_in_error_password">请填写至少六位数密码</string>
    <string name="sign_in_error_email">错误的邮箱格式</string>
    <string name="sign_up_edit_repassword_hint">验证密码</string>
    <string name="sign_up_error_name">请输入姓名</string>
    <string name="sign_up_error_email">错误的邮箱格式</string>
    <string name="sign_up_error_phone">手机号码错误</string>
    <string name="sign_up_error_password">请填写至少6位数密码</string>
    <string name="sign_up_error_repassword">验证密码错误</string>
    <string name="sign_up_suc_tip">验证成功!</string>
    <string name="index_search_hint">搜索</string>
    <string name="goods_detail_text">商品详情</string>
    <string name="sort_title">分类</string>
    <string name="section_header_text"><![CDATA[更多 >]]></string>
    <string name="text_discover">发现</string>
    <string name="text_shop_cart_clear">清空</string>
    <string name="text_shop_cart">购物车</string>
    <string name="text_shop_cart_remove">删除</string>
    <string name="stub_shop_cart">去购物</string>
    <string name="text_shop_cart_pay">结算</string>
    <string name="text_shop_cart_total_price">￥0.01</string>
    <string name="text_shop_cart_total">合计</string>
    <string name="text_selected_all">全选</string>
    <string name="text_item_shop_cart_title">商品标题</string>
    <string name="text_item_shop_cart_desc">商品描述</string>
    <string name="text_item_shop_cart_price">2.00</string>

    <string name="text_icon_item_minus">{fa-minus-square-o}</string>
    <string name="text_icon_item_plus">{fa-plus-square-o}</string>
    <string name="text_icon_item_shop_cart">{fa-check-circle}</string>
    <string name="index_qr_code">{icon-scan}</string>
    <string name="index_message">{fa-bullhorn}</string>
    <string name="sign_in_weixin">{fa-weixin}</string>
    <string name="text_icon_shop_cart_select_all">{fa-check-circle}</string>
    <string name="text_item_shop_cart_count">1</string>
    <string name="tip_check_count">你该购物啦！</string>
    <string name="text_btn_dialog_pay_cancel">取消支付</string>
    <string name="text_pay_wechat">{fa-weixin}</string>
    <string name="text_ali_pay">{icon-ali-pay}</string>
    <string name="text_user_name">小木箱</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_all_order">全部订单</string>
    <string name="text_after_sale">售后</string>
    <string name="text_personal_icon">{fa-chevron-right}</string>
    <string name="text_wait_pay">待付款</string>
    <string name="text_wait_receive">待收货</string>
    <string name="text_wait_rating">待评价</string>
    <string name="fa_credit_card">{fa-credit-card}</string>
    <string name="fa_truck">{fa-truck}</string>
    <string name="fa_clone">{fa-clone}</string>
    <string name="fa_comments_o">{fa-comments-o}</string>
    <string name="text_arrow_no_setting">未设置</string>
    <string name="icon_arrow">{fa-chevron-right}</string>
    <string name="fa_chevron_right">{fa-chevron-right}</string>
    <string name="name">姓名</string>
    <string name="defined_name">未设置姓名</string>
    <string name="sex">性别</string>
    <string name="defined_sex">未设置性别</string>
    <string name="birthday">生日</string>
    <string name="defined_birthday">未设置生日</string>
    <string name="btn_name_submit">提交</string>
    <string name="text_return">返回</string>
    <string name="title_order_list">订单列表</string>
    <string name="time_order_list">time</string>
    <string name="price_order_list">price</string>
    <string name="text_unbox">评价晒单</string>
    <string name="text_commit">提交</string>
    <string name="text_grade">评分</string>
    <string name="title_about">关于</string>
    <string name="title_settings">设置</string>
    <string name="text_address_manager">地址管理</string>
    <string name="fa_plus_square_o">{fa-plus-square-o}</string>
    <string name="text_phone">电话</string>
    <string name="text_address_delete">删除</string>
    <string name="address_shipping">收货地址</string>
    <string name="system_settings">系统设置</string>
    <string name="tip_open_push">打开推送</string>
    <string name="tip_close_push">关闭推送</string>
    <string name="msg_push">消息推送</string>
    <string name="text_write_comment">写下评论</string>
    <string name="tip_comment">评分：</string>
    <string name="fa_chevron">{fa-chevron-right}</string>
    <string name="fa_clock_o">{fa-clock-o}</string>
    <string name="fa_arrow_left">{fa-arrow-left}</string>
    <string name="text_search_view">搜索</string>
    <string name="text_get_qr_code">得到的二维码是</string>
    <string name="text_add_shop">加入购物车</string>
    <string name="text_shop">购物车</string>
    <string name="text_like">喜欢</string>
    <string name="fa_heart_o">{fa-heart-o}</string>
    <string name="fa_shopping_cart">{fa-shopping-cart}</string>
    <string name="fa_chevron_left">{fa-chevron-left}</string>
    <string name="text_goods_detail">商品详情</string>
    <string name="text_goods_info_price">1299</string>
    <string name="text_price_tag">￥</string>


</resources>
