<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="@dimen/dp_120"
                                              android:layout_marginBottom="@dimen/dp_5"
                                              android:background="@android:color/white"
                                              android:orientation="horizontal">

    <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_item_shop_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/text_icon_item_shop_cart"
            android:textColor="@android:color/darker_gray"
            />

    <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_item_shop_cart"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"/>

    <!--商品信息-->
    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_item_shop_cart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/text_item_shop_cart_title"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_item_shop_cart_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/text_item_shop_cart_desc"
                />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_item_shop_cart_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_item_shop_cart_price"
                android:textColor="@color/app_main"
                android:typeface="monospace"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--商品信息结束-->

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

        <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_item_minus"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/text_icon_item_minus"
                android:textSize="@dimen/sp_24"
                />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_item_shop_cart_count"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/text_item_shop_cart_count"
                android:textSize="@dimen/sp_18"
                />

        <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_item_plus"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/text_icon_item_plus"
                android:textSize="@dimen/sp_24"
                />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>