<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:orientation="horizontal"
                                              android:background="@android:color/white"
                                              android:layout_width="match_parent"
                                              android:layout_marginBottom="@dimen/dp_2"
                                              android:layout_height="@dimen/dp_80">

    <android.support.v7.widget.ContentFrameLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_order_list"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70"
                android:layout_gravity="center"
                />
    </android.support.v7.widget.ContentFrameLayout>

    <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent">


        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_order_list_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="@string/title_order_list"
                />

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_order_list_price"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/price_order_list"
                    />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_order_list_time"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/time_order_list"
                    />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fa_chevron"
            android:textSize="@dimen/sp_18"
            />
</android.support.v7.widget.LinearLayoutCompat>