<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:id="@+id/ll_bottom"
                                              android:layout_width="match_parent"
                                              android:layout_height="@dimen/dp_50"
                                              android:layout_alignParentBottom="true"
                                              android:baselineAligned="true"
                                              android:orientation="horizontal">

    <RelativeLayout
            android:id="@+id/rl_favor"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/dp_5">

        <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_favor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/fa_heart_o"
                android:textSize="@dimen/sp_20"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/text_like"
                android:textSize="@dimen/sp_12"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rl_shop_cart"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/dp_5">

        <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_shop_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/fa_shopping_cart"
                android:textSize="@dimen/sp_20"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/text_shop"
                android:textSize="@dimen/sp_12"/>

        <com.asiainfo.latte_ui.widget.CircleTextView
                android:id="@+id/tv_shopping_cart_amount"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignEnd="@+id/icon_shop_cart"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/icon_shop_cart"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12"
                />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rl_add_shop_cart"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/text_add_shop"
                android:textColor="@android:color/white"/>

    </RelativeLayout>
</android.support.v7.widget.LinearLayoutCompat>